# ml-intro

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ml_intro/: __init__.py  main.py  utility.py
tests/: __init__.py  test_ml_intro.py
